# PDFXtract-Arena

./: .env.example  .gitignore  README.md  check_env_vars.py  check_google_methods.py  check_results.py  create_test_pdf.py  debug_adobe_web.py  debug_availability.py  debug_google_response.py  debug_results.py  final_adobe_test.py  pyproject.toml  requirements.txt  test_adobe_adapter.py  test_adobe_credentials.py  test_adobe_ui.py  test_complete_workflow.py  test_ocr.py  test_web_adobe.py
docs/: UNDERSTANDING_OUTPUTS.md
pdfx_bench/: __init__.py  __main__.py  cli.py  detectors.py  exporters.py  normalize.py  provenance.py  schema.py  scoring.py
pdfx_bench/adapters/: adobe_extract_adapter.py  amazon_textract_adapter.py  azure_docintel_adapter.py  azure_layout_adapter.py  azure_read_adapter.py  camelot_adapter.py  docai_adapter.py  google_form_adapter.py  google_layout_adapter.py  google_ocr_adapter.py  llm_adapter.py  pdfplumber_adapter.py  poppler_adapter.py  tabula_adapter.py  tesseract_ocr.py  textract_adapter.py
pdfx_bench/utils/: io.py  logging.py  timers.py
samples/: README.md
scripts/: check_dependencies.py  setup-windows.ps1
test_adobe_results/: summary.json
test_adobe_results/reports/: test_document_comparison.md
test_all_google_methods/: summary.json
test_all_google_methods/reports/: test_document_comparison.md
test_all_local/: summary.json
test_all_local/reports/: test_document_comparison.md
test_azure_both/: summary.json
test_azure_both/reports/: test_document_comparison.md
test_azure_both_final/: summary.json
test_azure_layout/: summary.json
test_azure_layout_final/: summary.json
test_azure_layout_fixed/: summary.json
test_azure_layout_success/: summary.json
test_azure_read/: summary.json
test_azure_read_final/: summary.json
test_azure_read_fixed/: summary.json
test_azure_read_success/: summary.json
test_azure_verification/: summary.json
test_comparison/: summary.json
test_confidence/: summary.json
test_final_verification/: summary.json
test_google_all_methods/: summary.json
test_google_debug/: summary.json
test_google_fixed/: summary.json
test_google_form_debug/: summary.json
test_google_form_final/: summary.json
test_google_form_fixed/: summary.json
test_google_layout_debug/: summary.json
test_google_layout_final/: summary.json
test_google_layout_fixed/: summary.json
test_google_layout_fixed2/: summary.json
test_google_layout_success/: summary.json
test_google_ocr/: summary.json
test_page_range/: summary.json
test_poppler/: summary.json
test_poppler_comparison/: summary.json
test_poppler_debug/: summary.json
test_results/: summary.json
tests/: README.md  __init__.py  test_amazon_textract.py  test_web_amazon_textract.py
web/: README.md  app.py
(+73 files in other folders)
